# python-filerix

./: .gitignore  CMakeLists.txt  Makefile  vcpkg.json
include/FileSystem/: DriveUtils.hpp  FileUtils.hpp  UserUtils.hpp
include/Listeners/: DriveListener.hpp  FileListener.hpp
src/: pybind11.cc
tests/: DriveUtils_getDeviceLabelOrUuid.py  DriveUtils_getDriveUsage.py  DriveUtils_getDrives.py  DriveUtils_mountDrive.py  DriveUtils_unmountDrive.py  FileUtils_compress.py  FileUtils_copy.py  FileUtils_cut.py  FileUtils_decompress.py  FileUtils_getFiles.py  FileUtils_moveTo.py  FileUtils_rename.py  FileUtils_searchFiles.py  run.py
